<layout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<data/>

	<android.support.constraint.ConstraintLayout
		android:id="@+id/register_constraint_layout"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/register_two_activity_register_constraint_layout_background_color">

		<TextView
			android:id="@+id/copyright_text_view"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginLeft="@dimen/register_two_activity_copyright_text_view_margin_start"
			android:layout_marginRight="@dimen/register_two_activity_copyright_text_view_margin_end"
			android:layout_marginBottom="@dimen/register_two_activity_copyright_text_view_margin_bottom"
			android:gravity="center"
			android:textColor="@color/register_two_activity_copyright_text_view_text_color"
			android:textSize="@dimen/register_two_activity_copyright_text_view_text_size"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			tools:layout_editor_absoluteX="51dp"
			tools:layout_editor_absoluteY="611dp"
			tools:text="@string/register_two_activity_copyright_text_view_text" />

		<TextView
			android:id="@+id/solution_text_view"
			android:layout_width="@dimen/register_two_activity_solution_text_view_width"
			android:layout_height="26dp"
			android:layout_marginTop="36dp"
			android:gravity="center"
			android:text="@string/register_two_activity_solution_text_view_text"
			android:textColor="@color/register_two_activity_solution_text_view_text_color"
			android:textSize="@dimen/register_two_activity_solution_text_view_text_size"
			app:layout_constraintHorizontal_bias="0.497"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/awareness2_image_view"
			tools:ignore="MissingConstraints" />

		<Button
			android:id="@+id/signup_button"
			android:layout_width="@dimen/register_two_activity_signup_button_width"
			android:layout_height="@dimen/register_two_activity_signup_button_height"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			android:layout_marginEnd="8dp"
			android:layout_marginBottom="8dp"
			android:background="@drawable/register_two_activity_signup_button_ripple"
			android:gravity="center"
			android:text="@string/register_two_activity_signup_button_text"
			android:textColor="@color/register_two_activity_signup_button_text_color"
			android:textSize="@dimen/register_two_activity_signup_button_text_size"
			app:layout_constraintBottom_toTopOf="@+id/copyright_text_view"
			app:layout_constraintEnd_toStartOf="@+id/login_button"
			app:layout_constraintHorizontal_bias="0.521"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/wasllogo_image_view" />

		<Button
			android:id="@+id/login_button"
			android:layout_width="152dp"
			android:layout_height="@dimen/register_two_activity_login_button_height"
			android:layout_marginTop="8dp"
			android:layout_marginEnd="32dp"
			android:layout_marginBottom="8dp"
			android:background="@drawable/register_two_activity_login_button_ripple"
			android:gravity="center"
			android:text="@string/register_two_activity_login_button_text"
			android:textColor="@color/register_two_activity_login_button_text_color"
			android:textSize="@dimen/register_two_activity_login_button_text_size"
			app:layout_constraintBottom_toTopOf="@+id/copyright_text_view"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/wasllogo_image_view" />

		<ImageView
			android:id="@+id/awareness2_image_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:scaleType="centerCrop"
			android:src="@drawable/awareness_2_2"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:ignore="MissingConstraints" />

		<ImageView
			android:id="@+id/wasllogo_image_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="44dp"
			android:scaleType="center"
			android:src="@drawable/image_3"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/solution_text_view"
			tools:ignore="MissingConstraints" />

	</android.support.constraint.ConstraintLayout>
</layout>