<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".staff_student">

    <!-- TODO: Update blank fragment layout -->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/sign_up_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradiantcolot_background">


        <View
            android:id="@+id/confirm_password_constraint_layout"
            android:layout_width="@dimen/sign_up_organizer_activity_confirm_password_constraint_layout_width"
            android:layout_height="@dimen/sign_up_organizer_activity_confirm_password_constraint_layout_height"
            android:background="@drawable/sign_up_organizer_activity_confirm_password_constraint_layout_background"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_constraint_layout" />

        <View
            android:id="@+id/password_constraint_layout"
            android:layout_width="274dp"
            android:layout_height="45dp"
            android:background="@drawable/sign_up_organizer_activity_password_constraint_layout_background"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_constraint_layout2" />

        <View
            android:id="@+id/phone_constraint_layout2"
            android:layout_width="276dp"
            android:layout_height="41dp"
            android:background="@drawable/sign_up_organizer_activity_password_constraint_layout_background"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_constraint_layout" />

        <View
            android:id="@+id/email_constraint_layout"
            android:layout_width="@dimen/sign_up_organizer_activity_email_constraint_layout_width"
            android:layout_height="@dimen/sign_up_organizer_activity_email_constraint_layout_height"
            android:background="@drawable/sign_up_organizer_activity_email_constraint_layout_background"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_constraint_layout" />

        <View
            android:id="@+id/username_constraint_layout"
            android:layout_width="276dp"
            android:layout_height="44dp"
            android:layout_marginStart="68dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/sign_up_organizer_activity_username_constraint_layout_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/man_user_image_view" />

        <EditText
            android:id="@+id/username_edit_text2"
            android:layout_width="254dp"
            android:layout_height="24dp"
            android:background="@color/sign_up_organizer_activity_username_edit_text_background_color"
            android:gravity="start|center_vertical"
            android:hint="@string/sign_up_organizer_activity_username_edit_text_hint"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/sign_up_organizer_activity_username_edit_text_text_color"
            android:textColorHint="@color/default_hint"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/username_constraint_layout"
            app:layout_constraintEnd_toEndOf="@+id/username_constraint_layout"
            app:layout_constraintStart_toStartOf="@+id/username_constraint_layout"
            app:layout_constraintTop_toTopOf="@+id/username_constraint_layout" />

        <EditText
            android:id="@+id/email_address_edit_text"
            android:layout_width="@dimen/sign_up_organizer_activity_email_address_edit_text_width"
            android:layout_height="@dimen/sign_up_organizer_activity_email_address_edit_text_height"
            android:layout_marginBottom="20dp"
            android:background="@color/sign_up_organizer_activity_email_address_edit_text_background_color"
            android:gravity="start|center_vertical"
            android:hint="@string/sign_up_organizer_activity_email_address_edit_text_hint"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/sign_up_organizer_activity_email_address_edit_text_text_color"
            android:textColorHint="@color/default_hint"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/email_constraint_layout"
            app:layout_constraintEnd_toEndOf="@+id/email_constraint_layout"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@+id/email_constraint_layout" />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="@dimen/sign_up_organizer_activity_password_edit_text_width"
            android:layout_height="39dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/sign_up_organizer_activity_password_edit_text_background_color"
            android:gravity="start|center_vertical"
            android:hint="@string/sign_up_organizer_activity_password_edit_text_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/sign_up_organizer_activity_password_edit_text_text_color"
            android:textColorHint="@color/default_hint"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/password_constraint_layout"
            app:layout_constraintEnd_toEndOf="@+id/password_constraint_layout"
            app:layout_constraintHorizontal_bias="0.588"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@+id/password_constraint_layout"
            app:layout_constraintTop_toBottomOf="@+id/phone_constraint_layout2"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/phone_edit_text2"
            android:layout_width="258dp"
            android:layout_height="28dp"
            android:layout_marginBottom="8dp"
            android:background="@color/sign_up_organizer_activity_password_edit_text_background_color"
            android:gravity="start|center_vertical"
            android:hint="Phone Number"
            android:inputType="phone"
            android:maxLines="1"
            android:textColor="@color/sign_up_organizer_activity_password_edit_text_text_color"
            android:textColorHint="@color/default_hint"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/phone_constraint_layout2"
            app:layout_constraintEnd_toEndOf="@+id/phone_constraint_layout2"
            app:layout_constraintStart_toStartOf="@+id/phone_constraint_layout2"
            app:layout_constraintTop_toTopOf="@+id/phone_constraint_layout2"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/confirm_password_edit_text2"
            android:layout_width="@dimen/sign_up_organizer_activity_confirm_password_edit_text_width"
            android:layout_height="@dimen/sign_up_organizer_activity_confirm_password_edit_text_height"
            android:background="@color/sign_up_organizer_activity_confirm_password_edit_text_background_color"
            android:gravity="start|center_vertical"
            android:hint="@string/sign_up_organizer_activity_confirm_password_edit_text_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/sign_up_organizer_activity_confirm_password_edit_text_text_color"
            android:textColorHint="@color/default_hint"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/confirm_password_constraint_layout"
            app:layout_constraintEnd_toEndOf="@+id/confirm_password_constraint_layout"
            app:layout_constraintHorizontal_bias="0.526"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@+id/confirm_password_constraint_layout"
            app:layout_constraintTop_toTopOf="@+id/confirm_password_constraint_layout" />

        <Button
            android:id="@+id/signup_button2"
            android:layout_width="@dimen/sign_up_organizer_activity_buttons_button_width"
            android:layout_height="@dimen/sign_up_organizer_activity_buttons_button_height"
            android:layout_marginTop="52dp"
            android:background="@drawable/sign_up_organizer_activity_buttons_button_ripple"
            android:gravity="center"
            android:text="@string/sign_up_organizer_activity_buttons_button_text"
            android:textColor="@color/sign_up_organizer_activity_buttons_button_text_color"
            android:textSize="@dimen/sign_up_organizer_activity_buttons_button_text_size"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password_edit_text2" />

        <ImageView
            android:id="@+id/man_user_image_view"
            android:layout_width="118dp"
            android:layout_height="121dp"
            android:layout_marginLeft="124dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="144dp"
            android:scaleType="center"
            android:src="@drawable/man_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar3"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/signup_button2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </android.support.constraint.ConstraintLayout>


</FrameLayout>